--- a/WebTool/index.html
+++ b/WebTool/index.html
@@ -21,12 +21,14 @@
     <div class="container p-2 mt-10 menu-container">
         <!-- Existing card -->
         <h1 class="text-center">X4 Catalog Explorer</h1>
-        <div class="text-center">
-            <!-- Button linking to jobeditor.html -->
-            <a href="jobeditor.html" class="menu-button">Go to Job Editor</a>
-            <!-- Next button linking to scriptproperties.html -->
-            <a href="scriptproperties.html" class="menu-button">Launch the Script Properties</a>
-        </div>
+        <!-- Button linking to the xml browser -->
+        <a href="browser.html?folder=." class="menu-button">Go to XML Browser</a>
+        <!-- Button linking to the raw browser of libraries files -->
+        <a href="/libraries" class="menu-button">Go to Raw Library Browser</a>
+        <!-- Next button linking to scriptproperties.html -->
+        <a href="scriptproperties.html" class="menu-button">Launch the Script Properties</a>
+        <!-- Button linking to jobeditor.html -->
+        <a href="jobeditor.html" class="menu-button">Go to Job Editor</a>
     </div>
 </body>
 
