--- a/WebTool/scriptproperties.html
+++ b/WebTool/scriptproperties.html
@@ -243,7 +243,7 @@
 </head>
 
 <body onload="init()">
-	<div class="container p-2 mt-5 mb-10 card-container">
+	<div class="container p-2 mt-5 mb-10 menu-container">
 		<h1 class="text-center">Script Editor</h1>
 		<a href="index.html" class="menu-button">Go Back</a>
 		<noscript>
