--- a/WebTool/browser.html
+++ b/WebTool/browser.html
@@ -49,6 +49,7 @@
     <div class="container p-2 mt-5 mb-10 menu-container">
         <h1>X4 Catalog Explorer - XML/XSL/XSD</h1>
         <a class="menu-button" href="index.html">Go to Home Page</a>
+        <a href="libraries" class="menu-button">Go to Raw Library Browser</a>
         <div id="folderInfo" class="folder-info"></div>
     </div>
     <div class="container mt-10 p-2 card-container">
@@ -66,7 +67,7 @@
 
         // Fetch the list of items (directories and files) for the given folder
         function fetchItemList(folder) {
-            document.getElementById('folderInfo').textContent = `Browsing folder: ${folder === '.' ? 'root' : folder}`;
+            document.getElementById('folderInfo').textContent = `Browsing folder: ${folder}`;
             fetch(`/api?folder=${encodeURIComponent(folder)}`)
                 .then(response => {
                     if (!response.ok) {
@@ -96,15 +97,27 @@
                 const link = document.createElement('a');
                 if (item.type === 'directory') {
                     // For directories, navigate to browser.html with folder parameter set to the directory's relative path.
-                    // Remove the leading slash from the item path.
                     const folderPath = item.path.startsWith('/') ? item.path.substring(1) : item.path;
                     link.href = `browser.html?folder=${encodeURIComponent(folderPath)}`;
                     link.textContent = item.name + '/';
                 } else {
-                    // For files, link directly for raw access.
-                    link.href = item.path;
-                    link.target = '_blank';
-                    link.textContent = item.name;
+                    // For files, create two links:
+                    // 1. A link for raw access (opens in a new tab)
+                    const rawLink = document.createElement('a');
+                    rawLink.href = item.path;
+                    rawLink.target = '_blank';
+                    rawLink.textContent = item.name;
+                    div.appendChild(rawLink);
+
+                    // 2. A link to launch the file externally via the /launch endpoint.
+                    const extLink = document.createElement('a');
+                    // Remove leading slash from the file path before sending it as a parameter
+                    const fileParam = item.path.startsWith('/') ? item.path.substring(1) : item.path;
+                    extLink.href = `/launch?file=${encodeURIComponent(fileParam)}`;
+                    extLink.textContent = '[Open externally]';
+                    extLink.className = 'external-link';
+                    extLink.target = '_blank';
+                    div.appendChild(extLink);
                 }
                 div.appendChild(link);
                 itemListDiv.appendChild(div);
