Header, update, scriptproperties.html

--- a/WebTool/scriptproperties.html
+++ b/WebTool/scriptproperties.html
@@ -241,7 +241,7 @@
 
 <body onload="init()">
 	<div class="container p-2 mt-5 mb-10 menu-container">
-		<h1 class="text-center">Script Editor</h1>
+		<h1 class="text-center">Script Property Docs</h1>
 		<a href="index.html" class="menu-button">Go Back</a>
 		<noscript>
 			JavaScript required
