--- a/WebTool/scriptproperties.html
+++ b/WebTool/scriptproperties.html
@@ -173,8 +173,8 @@
 
 		function init() {
 			initAutoComplete();
-			xmlDoc = loadXMLFile("libraries/scriptproperties.xml");
-			xslDoc = loadXMLFile("libraries/scriptproperties.xsl");
+			xmlDoc = loadXMLFile("scriptproperties.xml");
+			xslDoc = loadXMLFile("scriptproperties.xsl");
 			importExternalProperties();
 			forceUpdate();
 			document.getElementById("expression").focus();
