--- a/WebTool/index.html
+++ b/WebTool/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>X4 Catalog Explorer</title>
     <!-- Include Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
@@ -22,7 +22,7 @@
         <!-- Existing card -->
         <h1 class="text-center">X4 Catalog Explorer</h1>
         <!-- Button linking to the xml browser -->
-        <a href="browser.html?folder=." class="menu-button">Go to XML Browser</a>
+        <a href="xmlbrowser.html?folder=." class="menu-button">Go to XML Browser</a>
         <!-- Next button linking to scriptproperties.html -->
         <a href="scriptproperties.html" class="menu-button">Launch the Script Properties</a>
         <!-- Button linking to jobeditor.html -->
