--- a/WebTool/xmlbrowser.html
+++ b/WebTool/xmlbrowser.html
@@ -3,56 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>X4 File Browser</title>
     <!-- Include Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <style>
-        h1 {
-            text-align: center;
-        }
-
-        .file-list {
-            margin-top: 20px;
-        }
-
-        .item {
-            padding: 10px;
-            border-bottom: 1px solid #669;
-            display: flex;
-            align-items: center;
-        }
-
-        .item a {
-            text-decoration: none;
-            color: #BEF;
-            font-size: 1.1em;
-        }
-
-        .item a:hover {
-            color: #007acc;
-        }
-
-        .folder-info {
-            text-align: center;
-            color: #EFB;
-            margin-bottom: 20px;
-            font-style: italic;
-        }
-
-        .external-link {
-            margin-left: 10px !important;
-            font-size: 0.69em !important;
-            color: #0069af !important;
-        }
-
-        .external-link:hover {
-            color: #9ef !important;
-        }
-    </style>
+    <link rel="stylesheet" href="xmlbrowser.css">
 </head>
 
 <body>
@@ -117,7 +76,7 @@
                 if (item.type === 'directory') {
                     // For directories, navigate to browser.html with folder parameter set to the directory's relative path.
                     const folderPath = item.path.startsWith('/') ? item.path.substring(1) : item.path;
-                    link.href = `browser.html?folder=${encodeURIComponent(folderPath)}`;
+                    link.href = `xmlbrowser.html?folder=${encodeURIComponent(folderPath)}`;
                     link.textContent = item.name + '/';
                 } else {
                     // For files, create two links:
