--- a/WebTool/scriptproperties.html
+++ b/WebTool/scriptproperties.html
@@ -13,15 +13,15 @@
     <title>Script Property Documentation</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
-    <script type="module" src="scripts/main.js"></script>
+    <script type="module" src="scripts/xml_utils.js"></script>
 </head>
 
 <body>
-    <div class="container p-2 mt-5 mb-10 menu-container">
+    <div class="container p-2 menu-container">
         <h1 class="text-center">Script Property Documentation</h1>
         <a href="index.html" class="menu-button">Go Back</a>
 	</div>
-	<div class="container p-2 mt-5 mb-5 mt-5">
+	<div class="container p-2 menu-container">
         <div class="form-container">
             <form id="filterForm" class="base">
                 <div class="mb-3">
@@ -42,6 +42,8 @@
                 </div>
             </form>
 		</div>
+	</div>
+	<div class="container p-2 card-container">
 		<div class="table-container">
             <div id="divXMLDisplay" class="mt-4"></div>
         </div>
