WebApp upgrade 1.1.3 init

--- a/WebTool/scriptproperties.html
+++ b/WebTool/scriptproperties.html
@@ -11,15 +11,12 @@
 	<link rel="stylesheet" href="scriptproperties.css">
 
     <title>Script Property Documentation</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
-    <script type="module" src="scripts/xml_utils.js"></script>
 </head>
 
 <body>
     <div class="container p-2 menu-container">
         <h1 class="text-center">Script Property Documentation</h1>
-        <a href="index.html" class="menu-button">Go Back</a>
+        <a href="index.html" class="menu-button">Go to Home Page</a>
 	</div>
 	<div class="container p-2 menu-container">
         <div class="form-container">
@@ -48,5 +45,9 @@
             <div id="divXMLDisplay" class="mt-4"></div>
         </div>
 	</div>
+
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
+	<script type="module" src="scripts/xml_utils.js"></script>
 </body>
 </html>
