--- a/WebTool/scriptproperties.html
+++ b/WebTool/scriptproperties.html
@@ -24,7 +24,7 @@
                 <div class="mb-3">
                     <label for="expression" class="label">Filter Expression:</label>
                     <input id="expression" class="form-control" autocomplete="off">
-                </div>
+				</div>
                 <div class="form-check mb-3">
                     <input class="form-check-input" type="checkbox" id="sort">
                     <label class="form-check-label" for="sort">Sort properties</label>
@@ -38,6 +38,9 @@
                     <label class="form-check-label" for="show_ai">Show AI-specific keywords</label>
                 </div>
             </form>
+		</div>
+		<div class="container p-2 m-2">
+			<p id="hintStatus" class=""></p>	
 		</div>
 	</div>
 	<div class="container p-2 card-container">
