--- a/WebTool/scriptproperties.html
+++ b/WebTool/scriptproperties.html
@@ -39,9 +39,7 @@
                 </div>
             </form>
 		</div>
-		<div class="container p-2 m-2">
-			<p id="hintStatus" class=""></p>	
-		</div>
+		<div id="statusIndicator" class="container p-2 card-container" style="display: none;"></div>
 	</div>
 	<div class="container p-2 card-container">
 		<div class="table-container">
