XML Browser - Major Refactoring Part 1

--- a/WebTool/scriptproperties.html
+++ b/WebTool/scriptproperties.html
@@ -39,6 +39,7 @@
                 </div>
             </form>
 		</div>
+        <div id="hintStatus" class="container p-2 card-container" style="display: none;"></div>
 		<div id="statusIndicator" class="container p-2 card-container" style="display: none;"></div>
 	</div>
 	<div class="container p-2 card-container">
