xml_utils refactor wip

--- a/WebTool/scriptproperties.html
+++ b/WebTool/scriptproperties.html
@@ -40,6 +40,7 @@
             </form>
 		</div>
         <div id="hintStatus" class="container p-2 card-container" style="display: none;"></div>
+        <div id="fetchStatus" class="container p-2 card-container default-fetch-status" style="display: none;"></div>
 		<div id="statusIndicator" class="container p-2 card-container" style="display: none;"></div>
 	</div>
 	<div class="container p-2 card-container">
