--- a/WebTool/xmlbrowser.html
+++ b/WebTool/xmlbrowser.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,6 +14,7 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="xmlbrowser.css">
 </head>
+
 <body>
   <div class="container p-2 menu-container">
     <h1>X4 Catalog Explorer - XML/XSL/XSD</h1>
@@ -21,13 +23,14 @@
     <div id="dirInfo" class="folder-info"></div>
   </div>
   <div class="container mt-10 p-2 card-container">
-  <div id="fetchStatus" class="container default-fetch-status"></div>
+    <div id="fetchStatus" class="container default-fetch-status"></div>
     <div id="fileItems" class="item-list file-list">
       Loading items...
     </div>
   </div>
 
-  <!-- External JavaScript file -->
-  <script type="module" src="scripts/xml_browser.js"></script>
+  <!-- JavaScript files -->
+  <script type="module" src="scripts/web/xml_browser.js"></script>
 </body>
+
 </html>
