Refactoring no. 2 - Progress 65%

--- a/WebTool/xmlbrowser.html
+++ b/WebTool/xmlbrowser.html
@@ -30,6 +30,9 @@
   </div>
 
   <!-- JavaScript files -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
+  <!-- Browser Module -->
   <script type="module" src="scripts/web/xml_browser.js"></script>
 </body>
 
