--- a/WebTool/scriptproperties.html
+++ b/WebTool/scriptproperties.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="scriptproperties.css">
-
+    <meta charset="UTF-8" />
     <title>Script Property Documentation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Bootstrap & jQuery UI -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css" />
+
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="scriptproperties.css" />
+
 </head>
 
 <body>
@@ -20,31 +20,43 @@
         <h1 class="text-center">Script Property Documentation</h1>
         <a href="index.html" class="menu-button">Go to Home Page</a>
     </div>
+
     <div class="container p-2 menu-container">
-        <div class="form-container">
+        <div id="viewerOptions" class="container viewerOptions form-container">
             <form id="filterForm" class="base">
                 <div class="mb-3">
                     <label for="expression" class="label">Filter Expression:</label>
-                    <input id="expression" class="form-control" autocomplete="off">
+                    <input id="expression" class="form-control" autocomplete="off" />
                 </div>
                 <div class="form-check mb-3">
-                    <input class="form-check-input" type="checkbox" id="sort">
+                    <input class="form-check-input" type="checkbox" id="sort" />
                     <label class="form-check-label" for="sort">Sort properties</label>
                 </div>
                 <div class="form-check mb-3">
-                    <input class="form-check-input" type="checkbox" id="show_md" checked>
+                    <input class="form-check-input" type="checkbox" id="show_md" checked />
                     <label class="form-check-label" for="show_md">Show MD-specific keywords</label>
                 </div>
                 <div class="form-check mb-3">
-                    <input class="form-check-input" type="checkbox" id="show_ai" checked>
+                    <input class="form-check-input" type="checkbox" id="show_ai" checked />
                     <label class="form-check-label" for="show_ai">Show AI-specific keywords</label>
                 </div>
             </form>
+            <!-- Buttons for extra actions -->
+            <button id="transformBtn" class="btn btn-primary mt-2">Transform XML</button>
+            <button id="treeViewBtn" class="btn btn-secondary mt-2">Tree View</button>
+
+            <!-- Container for file drop if desired -->
+            <div id="filePickerContainer" class="mt-3 p-2 border">
+                Drop XSL file here
+            </div>
+            <p>Selected XSL File: <span id="xslFileName">No file chosen</span></p>
         </div>
+
         <div id="hintStatus" class="container p-2 card-container" style="display: none;"></div>
         <div id="fetchStatus" class="container p-2 card-container default-fetch-status" style="display: none;"></div>
         <div id="statusIndicator" class="container p-2 card-container" style="display: none;"></div>
     </div>
+
     <div class="container p-2 card-container">
         <div class="table-container">
             <div id="divXMLDisplay" class="mt-4"></div>
@@ -54,7 +66,11 @@
     <!-- JavaScript files -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
+
+    <!-- First load the utility module -->
     <script type="module" src="scripts/xml/xml_utils.js"></script>
+    <!-- Then load the main script that initializes everything -->
+    <script type="module" src="scripts/web/scriptproperties.js"></script>
 </body>
 
 </html>
