--- a/WebTool/viewer.html
+++ b/WebTool/viewer.html
@@ -2,13 +2,14 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>File Viewer</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Bootstrap CSS (for basic styling) -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="viewer.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Bootstrap CSS & jQuery UI (optional) -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="viewer.css" />
 </head>
 
 <body>
@@ -16,22 +17,30 @@
     <h1>File Viewer</h1>
     <a class="menu-button" href="index.html">Go to Home Page</a>
   </div>
+
+  <!-- Options for the viewer (we can dynamically add or remove UI elements) -->
   <div class="container p-2 menu-container">
     <div id="viewerOptions" class="container viewerOptions form-container">
-      <!-- Options specific to file type will be injected here -->
+      <!-- We'll fill this in dynamically in viewer.js based on file type -->
     </div>
+    <div id="fetchStatus" class="container default-fetch-status"></div>
   </div>
+
   <div class="container card-container">
     <div id="viewerContent" class="container p-2 viewer-content">
       <!-- File content will be rendered here -->
     </div>
+    <div id="sheetJSView" style="display: none;"></div>
   </div>
 
-  <!-- JavaScript files -->
-  <!-- Include viewer logic -->
-  <script src="scripts/web/doc_viewer.js"></script>
-  <!-- For XLS/XLSX support, include SheetJS here if needed -->
+  <!-- JavaScript libs -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
   <script lang="javascript" src="https://cdn.sheetjs.com/xlsx-0.20.3/package/dist/xlsx.full.min.js"></script>
+  <!-- 2) Load xml_utils (the module you showed that does transformations). -->
+  <script type="module" src="scripts/xml/xml_utils.js"></script>
+  <!-- 3) Load the actual viewer script that wires everything up. -->
+  <script type="module" src="scripts/web/viewer.js"></script>
 </body>
 
 </html>
