Major xml_utils refactor

--- a/WebTool/xmlbrowser.html
+++ b/WebTool/xmlbrowser.html
@@ -19,7 +19,7 @@
   <div class="container p-2 menu-container">
     <h1>X4 Catalog Explorer - XML/XSL/XSD</h1>
     <a class="menu-button" href="index.html">Go to Home Page</a>
-    <a href="#" id="rawBrowsingLink" class="menu-button raw-browsing-button" href="#">Raw Browsing</a>
+    <a href="#" id="rawBrowsingLink" class="menu-button raw-browsing-button">Raw Browsing</a>
     <div id="dirInfo" class="folder-info"></div>
   </div>
   <div class="container mt-10 p-2 card-container">
