--- a/WebTool/jobeditor.html
+++ b/WebTool/jobeditor.html
@@ -19,7 +19,7 @@
 <body>
     <div class="container p-2 mt-5 card-container">
         <h1 class="text-center">Job Editor</h1>
-        <a href="index.html" class="menu-button">Go Back</a>
+        <button type="button" href="index.html" class="menu-button">Go Back</button>
         <noscript>
             JavaScript required
         </noscript>
