--- a/WebTool/index.html
+++ b/WebTool/index.html
@@ -19,20 +19,17 @@
         <img src="Media/X4_logo.png" alt="X4 Logo" class="img-fluid mb-3"
             style="object-fit: contain; max-width: 50%; max-height: 50%; padding: 13px;">
     </div>
-    <div class="container p-2 mt-10 menu-container">
-        <!-- Existing card -->
-        <h1 class="text-center">X4 Catalog Explorer</h1>
-        <!-- Button linking to the xml browser -->
-        <a href="xmlbrowser.html?folder=." class="menu-button">Go to XML Browser</a>
-        <!-- Next button linking to scriptproperties.html -->
-        <a href="scriptproperties.html" class="menu-button">Launch the Script Properties</a>
-        <!-- Button linking to jobeditor.html -->
-        <a href="jobeditor.html" class="menu-button">Go to Job Editor</a>
-    </div>
+<div class="container p-2 mt-10 menu-container">
+    <h1 class="text-center">X4 Catalog Explorer</h1>
+    <button type="button" id="goToXMLBrowser" class="menu-button" data-href="xmlbrowser.html?folder=.">Go to XML Browser</button>
+    <button type="button" id="goToScriptProperties" class="menu-button" data-href="scriptproperties.html">Launch the Script Properties</button>
+    <button type="button" id="goToJobEditor" class="menu-button" data-href="jobeditor.html">Go to Job Editor</button>
+</div>
 
     <!-- JavaScript files -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
+    <script type="module" src="./scripts/web/index.js"></script>
 </body>
 
 </html>
