--- a/WebTool/scriptproperties.html
+++ b/WebTool/scriptproperties.html
@@ -18,7 +18,7 @@
 <body>
     <div class="container p-2 menu-container">
         <h1 class="text-center">Script Property Documentation</h1>
-        <a href="index.html" class="menu-button">Go to Home Page</a>
+        <button type="button" href="index.html" class="menu-button">Go to Home Page</button>
     </div>
 
     <div class="container p-2 menu-container">
@@ -42,8 +42,8 @@
                 </div>
             </form>
             <!-- Buttons for extra actions -->
-            <button id="transformBtn" class="btn btn-primary mt-2">Transform XML</button>
-            <button id="treeViewBtn" class="btn btn-secondary mt-2">Tree View</button>
+            <button type="button" id="transformBtn" class="btn btn-primary mt-2">Transform XML</button>
+            <button type="button" id="treeViewBtn" class="btn btn-secondary mt-2">Tree View</button>
 
             <!-- Container for file drop if desired -->
             <div id="filePickerContainer" class="mt-3 p-2 border">
