Viewer frontend + backend update

--- a/WebTool/viewer.html
+++ b/WebTool/viewer.html
@@ -20,7 +20,7 @@
 
   <!-- Options for the viewer (we can dynamically add or remove UI elements) -->
   <div class="container p-2 menu-container expandable">
-    <div class="mb-3">
+    <div class="container mb-3">
       <label for="expression" class="label">Filter Expression:</label>
       <input id="expression" class="form-control expression-input" autocomplete="off" />
     </div>
@@ -55,7 +55,7 @@
   <!-- JavaScript libs -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
-  <!-- 2) Load xml_utils (the module you showed that does transformations). -->
+  <!-- 2) Load xml_utils  -->
   <script type="module" src="scripts/xml/xml_utils.js"></script>
   <!-- 3) Load the actual viewer script that wires everything up. -->
   <script type="module" src="scripts/web/viewer.js"></script>
