--- a/WebTool/browser.html
+++ b/WebTool/browser.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="xmlbrowser.css">
+  <link rel="stylesheet" href="browser.css">
 </head>
 
 <body>
@@ -32,7 +32,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
   <!-- Browser Module -->
-  <script type="module" src="scripts/web/xml_browser.js"></script>
+  <script type="module" src="scripts/web/browser.js"></script>
 </body>
 
 </html>
