--- a/WebTool/index.html
+++ b/WebTool/index.html
@@ -21,7 +21,7 @@
     </div>
 <div class="container p-2 mt-10 menu-container">
     <h1 class="text-center">X4 Catalog Explorer</h1>
-    <button type="button" id="goToXMLBrowser" class="menu-button" data-href="xmlbrowser.html?folder=.">Go to XML Browser</button>
+    <button type="button" id="goToBrowser" class="menu-button" data-href="browser.html?folder=.">Go to XML Browser</button>
     <button type="button" id="goToScriptProperties" class="menu-button" data-href="scriptproperties.html">Launch the Script Properties</button>
     <button type="button" id="goToJobEditor" class="menu-button" data-href="jobeditor.html">Go to Job Editor</button>
 </div>
