--- a/WebTool/index.html
+++ b/WebTool/index.html
@@ -22,8 +22,9 @@
 <div class="container p-2 mt-10 menu-container">
     <h1 class="text-center">X4 Catalog Explorer</h1>
     <button type="button" id="goToBrowser" class="menu-button" data-href="browser.html?folder=.">Go to XML Browser</button>
-    <button type="button" id="goToScriptProperties" class="menu-button" data-href="scriptproperties.html">Launch the Script Properties</button>
-    <button type="button" id="goToJobEditor" class="menu-button" data-href="jobeditor.html">Go to Job Editor</button>
+
+    <button type="button" id="goToScriptProperties" class="menu-button" data-href="viewer.html?file=/libraries/scriptproperties.xml&type=xml">Launch the Script Properties</button>
+    <!--- <button type="button" id="goToJobEditor" class="menu-button" data-href="jobeditor.html">Go to Job Editor</button> --->
 </div>
 
     <!-- JavaScript files -->
